--- a/css1/styles.css
+++ b/css1/styles.css
@@ -10,10 +10,11 @@
   text-align: center;
  }
 
-#top img {			
+#mimg {			
   margin-left: auto;
   margin-right: auto;
   display: block;
+  border-radius: 10px;
 }
 
 #top{  
@@ -37,17 +38,38 @@ padding-top: 50px;
   text-align: center;
 }
 
+#imgpaws{
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
 #middle img {
   margin-left: auto;
   margin-right: auto;
   display: block;
-  border-radius: 10px;
+  
 }
 
 #middle nav{
   text-decoration: none;
   list-style-type: none;
 }
+
+.post {
+
+}
+
+.post-title{
+
+}
+#PAWS{
+  margin-left: 5%;
+  width: 25%;
+  height: 30%;
+}
+
+
 
 #bottom img {
   margin-left: auto;
