--- a/css1/styles.css
+++ b/css1/styles.css
@@ -23,12 +23,24 @@
   height: 47px;
 }
 
+#iotbtn {     
+  font-style: 20px;
+  border-radius: 10px;
+  width: 80px;
+  height: 47px;
+  background-color: black;
+}
+  
+#cap {
+  font-weight: bold;
+   color: blue;
+} 
+
 #devpic {     
   border-radius: 10px;
   width: 80px;
   height: 47px;
-  background-color: #1a96d7;
-
+  background-color: black;
 }
 
 
