--- a/css1/styles.css
+++ b/css1/styles.css
@@ -59,14 +59,14 @@
 }
 
 #nav{
-  margin-left: 20px;
+  margin-left: 2%;
 }
 
 
 #top{  
   border-top: 5px solid black;    
   background-color: #CCCCCC;
-  height: 125px;
+  height: 130px;
   border-bottom: 5px solid black;
 }
 
