--- a/css1/styles.css
+++ b/css1/styles.css
@@ -10,11 +10,29 @@
   text-align: center;
  }
 
-#mimg {			
+ #mimg1 {      
   margin-left: auto;
   margin-right: auto;
   display: block;
   border-radius: 10px;
+}
+
+#mimg {			
+  width: 700px;
+  height: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border-radius: 10px;
+}
+
+#quikPizza {     
+  border-radius: 10px;
+  width: 80px;
+  height: 47px;
+  margin-left: 40px;
+  font-weight: bold;
+  color: blue;
 }
 
 #iot {     
